src/gyhlngParser.java
// Generated from gyhlng.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gyhlngParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, DECLARAR=2, INTEGER=3, REAL=4, BOOLEAN=5, INICIO=6, FIM=7, 
		SE=8, ENTAO=9, SENAO=10, ENQTO=11, FACA=12, LER=13, IMPRIMIR=14, VERDADEIRO=15, 
		FALSO=16, E=17, OU=18, NAO=19, ATRIB=20, IGUAL=21, DIFERENTE=22, MENOR=23, 
		MENOR_IGUAL=24, MAIOR=25, MAIOR_IGUAL=26, MAIS=27, MENOS=28, MULT=29, 
		DIV=30, PONTO_VIRGULA=31, VIRGULA=32, DOIS_PONTOS=33, PONTO=34, ABRE_PAR=35, 
		FECHA_PAR=36, DELIM_ABRE=37, DELIM_FECHA=38, VAR=39, ID=40, NumInt=41, 
		NumReal=42, CADEIA=43, COMENTARIO=44, COMENTARIO_LINHA=45, WS=46;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_declaracao = 2, RULE_listaVars = 3, 
		RULE_tipo = 4, RULE_bloco = 5, RULE_comandos = 6, RULE_programaBr = 7, 
		RULE_declaracoesBr = 8, RULE_declaracaoBr = 9, RULE_comandosBr = 10, RULE_comandoBr = 11, 
		RULE_atribuicaoBr = 12, RULE_comandoLeituraBr = 13, RULE_comandoEscritaBr = 14, 
		RULE_comandoCondicionalBr = 15, RULE_comandoRepeticaoBr = 16, RULE_subAlgBr = 17, 
		RULE_comando = 18, RULE_atribuicao = 19, RULE_comandoLeitura = 20, RULE_comandoEscrita = 21, 
		RULE_comandoCondicional = 22, RULE_comandoRepeticao = 23, RULE_expressao = 24, 
		RULE_expressaoSimples = 25, RULE_termo = 26, RULE_fator = 27, RULE_numero = 28, 
		RULE_opRelacional = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "declaracao", "listaVars", "tipo", "bloco", 
			"comandos", "programaBr", "declaracoesBr", "declaracaoBr", "comandosBr", 
			"comandoBr", "atribuicaoBr", "comandoLeituraBr", "comandoEscritaBr", 
			"comandoCondicionalBr", "comandoRepeticaoBr", "subAlgBr", "comando", 
			"atribuicao", "comandoLeitura", "comandoEscrita", "comandoCondicional", 
			"comandoRepeticao", "expressao", "expressaoSimples", "termo", "fator", 
			"numero", "opRelacional"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAMA'", "'DECLARAR'", "'INTEGER'", "'REAL'", "'BOOLEAN'", 
			"'INICIO'", null, "'SE'", "'ENTAO'", "'SENAO'", "'ENQTO'", "'FACA'", 
			"'LER'", "'IMPRIMIR'", "'VERDADEIRO'", "'FALSO'", "'E'", "'OU'", "'NAO'", 
			"':='", null, null, "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", 
			"'/'", "';'", "','", "':'", "'.'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "DECLARAR", "INTEGER", "REAL", "BOOLEAN", "INICIO", 
			"FIM", "SE", "ENTAO", "SENAO", "ENQTO", "FACA", "LER", "IMPRIMIR", "VERDADEIRO", 
			"FALSO", "E", "OU", "NAO", "ATRIB", "IGUAL", "DIFERENTE", "MENOR", "MENOR_IGUAL", 
			"MAIOR", "MAIOR_IGUAL", "MAIS", "MENOS", "MULT", "DIV", "PONTO_VIRGULA", 
			"VIRGULA", "DOIS_PONTOS", "PONTO", "ABRE_PAR", "FECHA_PAR", "DELIM_ABRE", 
			"DELIM_FECHA", "VAR", "ID", "NumInt", "NumReal", "CADEIA", "COMENTARIO", 
			"COMENTARIO_LINHA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gyhlng.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gyhlngParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(gyhlngParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(gyhlngParser.ID, 0); }
		public TerminalNode PONTO_VIRGULA() { return getToken(gyhlngParser.PONTO_VIRGULA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode PONTO() { return getToken(gyhlngParser.PONTO, 0); }
		public TerminalNode EOF() { return getToken(gyhlngParser.EOF, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(PROGRAMA);
			setState(61);
			match(ID);
			setState(62);
			match(PONTO_VIRGULA);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARAR) {
				{
				setState(63);
				declaracoes();
				}
			}

			setState(66);
			bloco();
			setState(67);
			match(PONTO);
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				declaracao();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DECLARAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode DECLARAR() { return getToken(gyhlngParser.DECLARAR, 0); }
		public ListaVarsContext listaVars() {
			return getRuleContext(ListaVarsContext.class,0);
		}
		public TerminalNode DOIS_PONTOS() { return getToken(gyhlngParser.DOIS_PONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PONTO_VIRGULA() { return getToken(gyhlngParser.PONTO_VIRGULA, 0); }
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(DECLARAR);
			setState(76);
			listaVars();
			setState(77);
			match(DOIS_PONTOS);
			setState(78);
			tipo();
			setState(79);
			match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaVarsContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(gyhlngParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(gyhlngParser.VAR, i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(gyhlngParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(gyhlngParser.VIRGULA, i);
		}
		public ListaVarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaVars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterListaVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitListaVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitListaVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaVarsContext listaVars() throws RecognitionException {
		ListaVarsContext _localctx = new ListaVarsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listaVars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(VAR);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(82);
				match(VIRGULA);
				setState(83);
				match(VAR);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(gyhlngParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(gyhlngParser.REAL, 0); }
		public TerminalNode BOOLEAN() { return getToken(gyhlngParser.BOOLEAN, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << REAL) | (1L << BOOLEAN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(gyhlngParser.INICIO, 0); }
		public TerminalNode FIM() { return getToken(gyhlngParser.FIM, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(INICIO);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INICIO) | (1L << SE) | (1L << ENQTO) | (1L << LER) | (1L << IMPRIMIR) | (1L << VAR))) != 0)) {
				{
				setState(92);
				comandos();
				}
			}

			setState(95);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				comando();
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INICIO) | (1L << SE) | (1L << ENQTO) | (1L << LER) | (1L << IMPRIMIR) | (1L << VAR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaBrContext extends ParserRuleContext {
		public List<TerminalNode> DELIM_ABRE() { return getTokens(gyhlngParser.DELIM_ABRE); }
		public TerminalNode DELIM_ABRE(int i) {
			return getToken(gyhlngParser.DELIM_ABRE, i);
		}
		public TerminalNode DECLARAR() { return getToken(gyhlngParser.DECLARAR, 0); }
		public List<TerminalNode> DELIM_FECHA() { return getTokens(gyhlngParser.DELIM_FECHA); }
		public TerminalNode DELIM_FECHA(int i) {
			return getToken(gyhlngParser.DELIM_FECHA, i);
		}
		public DeclaracoesBrContext declaracoesBr() {
			return getRuleContext(DeclaracoesBrContext.class,0);
		}
		public TerminalNode PROGRAMA() { return getToken(gyhlngParser.PROGRAMA, 0); }
		public ComandosBrContext comandosBr() {
			return getRuleContext(ComandosBrContext.class,0);
		}
		public TerminalNode EOF() { return getToken(gyhlngParser.EOF, 0); }
		public ProgramaBrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programaBr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterProgramaBr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitProgramaBr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitProgramaBr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaBrContext programaBr() throws RecognitionException {
		ProgramaBrContext _localctx = new ProgramaBrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_programaBr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(DELIM_ABRE);
			setState(103);
			match(DECLARAR);
			setState(104);
			match(DELIM_FECHA);
			setState(105);
			declaracoesBr();
			setState(106);
			match(DELIM_ABRE);
			setState(107);
			match(PROGRAMA);
			setState(108);
			match(DELIM_FECHA);
			setState(109);
			comandosBr();
			setState(110);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesBrContext extends ParserRuleContext {
		public List<DeclaracaoBrContext> declaracaoBr() {
			return getRuleContexts(DeclaracaoBrContext.class);
		}
		public DeclaracaoBrContext declaracaoBr(int i) {
			return getRuleContext(DeclaracaoBrContext.class,i);
		}
		public DeclaracoesBrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoesBr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterDeclaracoesBr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitDeclaracoesBr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitDeclaracoesBr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesBrContext declaracoesBr() throws RecognitionException {
		DeclaracoesBrContext _localctx = new DeclaracoesBrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracoesBr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				declaracaoBr();
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoBrContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(gyhlngParser.VAR, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(gyhlngParser.DOIS_PONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DeclaracaoBrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoBr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterDeclaracaoBr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitDeclaracaoBr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitDeclaracaoBr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoBrContext declaracaoBr() throws RecognitionException {
		DeclaracaoBrContext _localctx = new DeclaracaoBrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaracaoBr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(VAR);
			setState(118);
			match(DOIS_PONTOS);
			setState(119);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosBrContext extends ParserRuleContext {
		public List<ComandoBrContext> comandoBr() {
			return getRuleContexts(ComandoBrContext.class);
		}
		public ComandoBrContext comandoBr(int i) {
			return getRuleContext(ComandoBrContext.class,i);
		}
		public ComandosBrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandosBr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterComandosBr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitComandosBr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitComandosBr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosBrContext comandosBr() throws RecognitionException {
		ComandosBrContext _localctx = new ComandosBrContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comandosBr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121);
				comandoBr();
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INICIO) | (1L << SE) | (1L << ENQTO) | (1L << LER) | (1L << IMPRIMIR) | (1L << VAR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoBrContext extends ParserRuleContext {
		public AtribuicaoBrContext atribuicaoBr() {
			return getRuleContext(AtribuicaoBrContext.class,0);
		}
		public ComandoLeituraBrContext comandoLeituraBr() {
			return getRuleContext(ComandoLeituraBrContext.class,0);
		}
		public ComandoEscritaBrContext comandoEscritaBr() {
			return getRuleContext(ComandoEscritaBrContext.class,0);
		}
		public ComandoCondicionalBrContext comandoCondicionalBr() {
			return getRuleContext(ComandoCondicionalBrContext.class,0);
		}
		public ComandoRepeticaoBrContext comandoRepeticaoBr() {
			return getRuleContext(ComandoRepeticaoBrContext.class,0);
		}
		public SubAlgBrContext subAlgBr() {
			return getRuleContext(SubAlgBrContext.class,0);
		}
		public ComandoBrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoBr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).enterComandoBr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gyhlngListener ) ((gyhlngListener)listener).exitComandoBr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gyhlngVisitor ) return ((gyhlngVisitor<? extends T>)visitor).visitComandoBr(this);
			else return visitor.visitChildren(this);
		}
	}
